layout,common 수정

--- a/pub/index.html
+++ b/pub/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./js/jquery.3.1.1.js"></script>
     <script src="./js/ui.js"></script>
 </head>
 <body>
-    <div class="wrap">
-        <header>
+    <div class="wrap main_wrap">
+        <header class="white">
             <div class="header_area">
                 <div class="inner">
                     <h1 class="logo">
                         <a href="#none">
-                            <img src="./images/newauto_logo.png" alt="뉴오토정밀 로고">
+                            <img src="./images/newauto_logo.png" alt="뉴오토정밀 로고" class="logo_block">
+                            <img src="./images/newauto_logo_w.png" alt="뉴오토정밀 로고" class="logo_white">
                         </a>
                     </h1>
                     <nav class="gnb">
@@ -162,7 +164,9 @@
             </div>
         </header>
         <div class="contents">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quasi reprehenderit minus, a adipisci sint necessitatibus libero cum officiis quas fugiat enim error ipsum repellendus voluptates voluptatibus iusto nihil alias.</div>
+            <div>
+
+            </div>
         </div>
         <footer class="footer">
             <div class="footer_inner">
