feat: 품질경영시스템 모달창 - modal_practice 클래스를 지닌 모달창에 대한 close 버튼 추가 JS 제작 - reset.css > 임시 웹폰트 Pretendard 추가 - modal_img 폴더 추가 > 모달에 대한 이미지만 담을 것 - 회사소개 기술인증1 모달 제작 - 해당 크기의 모달 practice - 변경 및 추가 시, 주석 추가 요망

--- a/pub_list.html
+++ b/pub_list.html
@@ -47,12 +47,19 @@
             </a>
         </li>
         <li>
-            <a href="#none" target="_blank">
-                <p>회사소개 - 모달팝업</p>
-                <span></span>
+            <a href="pub/modal/intro_certify_modal.html" target="_blank">
+                <p>회사소개 - 모달팝업1</p>
+                <span>intro_certify_modal.html</span>
                 <span></span>
             </a>
         </li>
+      <li>
+        <a href="pub/modal/intro_certify_modal2.html" target="_blank">
+          <p>회사소개 - 모달팝업2</p>
+          <span>intro_certify_modal2.html</span>
+          <span></span>
+        </a>
+      </li>
         <li>
             <a href="#none" target="_blank">
                 <p>제품소개</p>
