--- a/pub/company.html
+++ b/pub/company.html
@@ -162,7 +162,9 @@
             </div>
         </header>
         <div class="contents">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quasi reprehenderit minus, a adipisci sint necessitatibus libero cum officiis quas fugiat enim error ipsum repellendus voluptates voluptatibus iusto nihil alias.</div>
+            <div class="sub_con_wrap">
+                
+            </div>
         </div>
         <footer class="footer">
             <div class="footer_inner">
