--- a/pub/index.html
+++ b/pub/index.html
@@ -165,8 +165,8 @@
                 </div>
             </div>
         </header>
-        <div class="main_con_wrap">
-            <div class="inner">
+        <div class="contents">
+            <div class="main_con_wrap">
                 <!-- main visual -->
                 <section class="main_visual">
                     <div class="visual_banner main_swiper">
