--- a/pub/company.html
+++ b/pub/company.html
@@ -161,10 +161,186 @@
                 </div>
             </div>
         </header>
-        <div class="contents">
-            <div class="sub_con_wrap">
-                
-            </div>
+        <div class="contents company_wrap">
+            <section class="company_intro">
+                <div class="intro_txt_area">
+                    <p class="intro_tit">
+                        끊임없는 변화와 혁신으로
+                        고객과 함께 성장하는 뉴오토정밀이 되겠습니다.
+                    </p>
+                    <span class="intro_desc">
+                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로
+                        자동차 엔진부품의 설계 및 제작과 ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여
+                        고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로 성장하고 있습니다.
+                    </span>
+                </div>
+                <div class="company_swiper intro_list">
+                    <ul class="swiper-wrapper">
+                        <li class="swiper-slide">
+                            <img src="./images/img_company01.png" alt="">
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="./images/img_company02.png" alt="">
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="./images/img_company03.png" alt="">
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="./images/img_company04.png" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="company_info">
+                <div class="info_inner">
+                    <div class="section_head type_company">
+                        <h2 class="section_tit">뉴오토정밀㈜</h2>
+                    </div>
+                    <div class="company_detail">
+                        <ul class="company_info_list">
+                            <li class="info_item">
+                                <span class="info_label">CEO</span>
+                                <span class="info_value">문학노</span>
+                            </li>
+
+                            <li class="info_item">
+                                <span class="info_label">설립일</span>
+                                <span class="info_value">2007.05.15</span>
+                            </li>
+
+                            <li class="info_item">
+                                <span class="info_label">소재지</span>
+                                <span class="info_value">경기도 화성시 안녕남로 97-21</span>
+                            </li>
+
+                            <li class="info_item">
+                                <span class="info_label">대표전화</span>
+                                <span class="info_value">
+                                    031-224-6771<br>
+                                    031-224-6772 (Fax)
+                                </span>
+                            </li>
+
+                            <li class="info_item">
+                                <span class="info_label">사업부문</span>
+                                <span class="info_value">자동차 엔진부품 제조</span>
+                            </li>
+
+                            <li class="info_item">
+                                <span class="info_label">생산제품</span>
+                                <span class="info_value">
+                                    Water Pump / Oil Pump / TENSIONER / IDLER / THERMOSTAT
+                                </span>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="ceo_message">
+                <div class="section_inner">
+                    <div class="section_head">
+                        <h2 class="section_tit">CEO 메시지</h2>
+                    </div>
+                    <div class="message_wrap">
+                        <div class="message_cont">
+                            <p class="message_text">
+                                뉴오토정밀은 1985년 설립 이래 ‘끊임없는 도전’, ‘한마음 된 화합’, ‘미래가치 창조’의 경영이념으로 고객만족, 품질 우선, 기술 개발, 경영혁신을 이루기 위하여 전사적으로 노력한 결과 국내 및 해외 자동차 엔진부품 시장에서 그 가치를 인정받고 있습니다.
+
+                                현재에 만족하지 않고 앞으로도 차세대 자동차 부품 개발과 생산의 견고한 기반을 다지기 위하여 끊임없이 노력할 것입니다.
+
+                                고객의 신뢰를 바탕으로 경쟁력 있는 가격과 우수한 품질로 보답할 것이며, 앞선 자의 열정과 뒤돌아보는 자의 겸손으로 전 직원이 한마음 되어 고객만족을 위하여 미래를 만들어 가겠습니다.
+
+                                변함없는 신뢰와 격려 부탁드립니다.
+
+                                감사합니다.
+                            </p>
+                            <span class="message_sign">뉴오토정밀(주) 대표이사 문학노</span>                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="management_philosophy">
+                <div class="section_inner">
+                    <div class="section_head">
+                        <h2 class="section_tit">경영이념</h2>
+                    </div>
+
+                    <div class="philosophy_wrap">
+                        <ul class="philosophy_list">
+                            <li class="philosophy_item">
+                                <strong class="philosophy_tit">끊임없는 도전</strong>
+                                <p class="philosophy_desc">
+                                    변화에 두려워하지 않고 행동으로 옮기며 고객만족을 넘어 고객감동을 실현하기 위하여 앞으로 나아간다.
+                                </p>
+                            </li>
+                            <li class="philosophy_item">
+                                <strong class="philosophy_tit">한마음 된 화합</strong>
+                                <p class="philosophy_desc">근면, 성실, 하나 되는 마음을 바탕으로 고객 및 협력사와 직원 상호 간 아끼고 위하며 서로 상생할 수 있도록 최선을 다한다.</p>
+                            </li>
+                            <li class="philosophy_item">
+                                <strong class="philosophy_tit">미래 가치 창조</strong>
+                                <p class="philosophy_desc">차세대 자동차 부품 개발은 기업 성장의 동력이라는 것을 인식하고 인재 양성과 연구개발에 끊임없이 매진한다.</p>
+                            </li>
+                        </ul>
+                    </div>  
+                </div>
+            </section>
+            <section class="certification">
+                <div class="section_inner">
+                    <div class="section_head">
+                        <h2 class="section_tit">기술 인증</h2>
+                    </div>
+                    <div class="cert_wrap">
+                        <ul class="cert_list">
+                            <li class="cert_item">
+                                <a href="" class="cert_link">
+                                    <strong class="cert_tit">IATF 16949</strong>
+                                    <p class="cert_desc">IATF 16949 인증을 취득함으로써 고객의 특정 요구사항을 충족하는 시스템을 수립하고 지속적인 개선과 결함 예방 및 산포와 낭비 감소를 위한 품질경영시스템을 갖추어 기업의 경쟁력 제고합니다.</p>
+                                    <span class="cert_icon"></span>
+                                </a>
+                            </li>
+                            <li class="cert_item">
+                                <a href="">
+                                    <strong class="cert_tit">ISO 9001</strong>
+                                    <p class="cert_desc">ISO 9001은 제품 및 서비스에 이르기까지 전 생산 과정에 걸친 품질보증 체계로써 인증 취득으로 고객에게 기업의 신뢰감 제공합니다.</p>
+                                    <span class="cert_icon"></span>
+                                </a>
+                            </li>
+                            <li class="cert_item">
+                                <a href="">
+                                    <strong class="cert_tit">ISO 14001</strong>
+                                    <p class="cert_desc">ISO 14001은 기업이나 조직이 환경에 미치는 영향을 최소화하고, 지속가능한 개발 및 경영전략을 수립할 수 있도록 하는 환경경영시스템이며, 인증 취득으로 환경 위험성의 효율적 관리 및 개선합니다.</p>
+                                    <span class="cert_icon"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>  
+                </div>
+            </section>
+            <section class="company_ci">
+                <div class="section_inner">
+                    <div class="section_head">
+                        <h2 class="section_tit">CI</h2>
+                    </div>
+
+                    <div class="ci_wrap">
+                        <div class="ci_logo">
+                            <span class="ci_shape ci_shape01"></span>
+                            <span class="ci_shape ci_shape02"></span>
+                            <span class="ci_shape ci_shape03"></span>
+                        </div>
+
+                        <p class="ci_desc">
+                            뉴오토정밀 (NewAuto Precision)은 지구 모양의 원 안에 그리드를 배치하여 글로벌 시장을 표현하고, 기업 이름의 첫 세 글자와 별을 형상화하여 세계 시장을 중심으로 빛을 발하는 미래지향적인 이미지를 담아냈습니다. 또한, 뉴오토정밀의 세 글자를 공장 형태로 재구성함으로써, 제조업을 기반으로 지속 가능한 성장을 추구하는 기업의 비전을 상징적으로 나타내고 있습니다.
+                        </p>
+
+                        <div class="ci_btn_wrap">
+                            <button type="button" class="btn_ci_download ai">AI 다운로드</button>
+                            <button type="button" class="btn_ci_download png">PNG 다운로드</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="footer_inner">
