--- a/pub_list.html
+++ b/pub_list.html
@@ -26,13 +26,6 @@
 	</ul>
     <ul>
         <li>
-            <a href="#none" target="_blank">
-                <p>ex메인</p>
-                <span>ex.html</span>
-                <span>예시</span>
-            </a>
-        </li>
-        <li>
             <a href="./pub/index.html" target="_blank">
                 <p>메인</p>
                 <span>index.html</span>
@@ -40,9 +33,9 @@
             </a>
         </li>
 		<li>
-            <a href="#none" target="_blank">
+            <a href="./pub/company.html" target="_blank">
                 <p>회사소개</p>
-                <span></span>
+                <span>company.html</span>
                 <span></span>
             </a>
         </li>
