--- a/pub/company.html
+++ b/pub/company.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>뉴오토정밀 - 회사소개</title>
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/company.css">
     <script src="./js/jquery.3.1.1.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
@@ -165,7 +166,7 @@
             <section class="company_intro">
                 <div class="intro_txt_area">
                     <p class="intro_tit">
-                        끊임없는 변화와 혁신으로
+                        끊임없는 변화와 혁신으로<br>
                         고객과 함께 성장하는 뉴오토정밀이 되겠습니다.
                     </p>
                     <span class="intro_desc">
@@ -256,18 +257,33 @@
                     <div class="philosophy_area con_box">
                         <ul class="philosophy_list">
                             <li class="item">
+                                <span class="icon_svg">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                                        <path d="M55.2 1.7c-7.9-4-17.5-.7-21.5 7.2s-.7 17.5 7.2 21.5l64 32c7.9 4 17.5 .7 21.5-7.2s.7-17.5-7.2-21.5l-64-32zm544 28.6c7.9-4 11.1-13.6 7.2-21.5s-13.6-11.1-21.5-7.2l-64 32c-7.9 4-11.1 13.6-7.2 21.5s13.6 11.1 21.5 7.2l64-32zM16 160c-8.8 0-16 7.2-16 16s7.2 16 16 16H80c8.8 0 16-7.2 16-16s-7.2-16-16-16H16zm544 0c-8.8 0-16 7.2-16 16s7.2 16 16 16h64c8.8 0 16-7.2 16-16s-7.2-16-16-16H560zM119.2 318.3c7.9-4 11.1-13.6 7.2-21.5s-13.6-11.1-21.5-7.2l-64 32c-7.9 4-11.1 13.6-7.2 21.5s13.6 11.1 21.5 7.2l64-32zm416-28.6c-7.9-4-17.5-.7-21.5 7.2s-.7 17.5 7.2 21.5l64 32c7.9 4 17.5 .7 21.5-7.2s.7-17.5-7.2-21.5l-64-32zM464 176c0 30.6-9.5 58.8-25.7 82.1c-4.1 5.9-8.7 12.3-13.6 19c-12.7 17.5-27.1 37.2-38 57.1c-8.9 16.2-13.7 33.3-16.2 49.9H403c2.2-12 5.9-23.7 11.8-34.5c9.9-18 22.2-34.9 34.5-51.8l0 0 0 0 0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C496 78.8 417.2 0 320 0S144 78.8 144 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0 0 0 0 0c12.3 16.8 24.6 33.7 34.5 51.8c5.9 10.8 9.6 22.5 11.8 34.5h32.4c-2.5-16.6-7.3-33.7-16.2-49.9c-10.9-20-25.3-39.7-38-57.1l0 0c-4.9-6.7-9.5-13-13.6-19C185.5 234.8 176 206.6 176 176c0-79.5 64.5-144 144-144s144 64.5 144 144zm-224 0c0-44.2 35.8-80 80-80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-61.9 0-112 50.1-112 112c0 8.8 7.2 16 16 16s16-7.2 16-16zm80 304c-20.9 0-38.7-13.4-45.3-32h90.5c-6.6 18.6-24.4 32-45.3 32zm-80-53.3V432c0 44.2 35.8 80 80 80s80-35.8 80-80v-5.3c0-5.9-4.8-10.7-10.7-10.7H250.7c-5.9 0-10.7 4.8-10.7 10.7z"/>
+                                    </svg>
+                                </span>
                                 <div class="txt_box">
                                     <strong class="philosophy_tit">끊임없는 도전</strong>
                                     <p class="philosophy_desc">변화에 두려워하지 않고 행동으로 옮기며 고객만족을 넘어 고객감동을 실현하기 위하여 앞으로 나아간다.</p>
                                 </div>
                             </li>
                             <li class="item">
+                                <span class="icon_svg">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                                        <path d="M224 32a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm0 96c4.5 0 8.9-.5 13.1-1.3l38.1 83.2c-26.6 17.2-45.4 45.4-50.1 78.1H126c-7.1-27.6-32.2-48-62-48c-35.3 0-64 28.7-64 64s28.7 64 64 64c29.8 0 54.9-20.4 62-48h99.2c7.8 54.3 54.4 96 110.9 96c35 0 66.3-16.1 86.8-41.2l91.8 55.1c-1.7 5.8-2.6 11.9-2.6 18.2c0 35.3 28.7 64 64 64s64-28.7 64-64s-28.7-64-64-64c-17.5 0-33.4 7-44.9 18.4l-91.8-55.1c5.6-13.3 8.7-28 8.7-43.3c0-18.7-4.6-36.3-12.7-51.8l101.8-73.3c10.8 8.2 24.2 13.1 38.8 13.1c35.3 0 64-28.7 64-64s-28.7-64-64-64s-64 28.7-64 64c0 9.1 1.9 17.8 5.4 25.7L416.6 226.2c-20.4-21.1-49-34.2-80.6-34.2c-11 0-21.6 1.6-31.7 4.5l-38.5-84.1C279.4 100.7 288 83.4 288 64c0-35.3-28.7-64-64-64s-64 28.7-64 64s28.7 64 64 64zM576 96a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM544 448a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM64 272a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm272-48a80 80 0 1 1 0 160 80 80 0 1 1 0-160z"/>
+                                    </svg>
+                                </span>
                                 <div class="txt_box">
                                     <strong class="philosophy_tit">한마음 된 화합</strong>
                                     <p class="philosophy_desc">근면, 성실, 하나 되는 마음을 바탕으로 고객 및 협력사와 직원 상호 간 아끼고 위하며 서로 상생할 수 있도록 최선을 다한다.</p>
                                 </div>
                             </li>
                             <li class="item">
+                                <span class="icon_svg">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                                        <path d="M534.5 86.6L369.9 251.3 324.6 206 489.3 41.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3zM347.3 273.9l-36.6 36.6-36.1 36.1 0 0-4.6 4.6L224.6 306l40.7-40.7 0 0L302 228.6l45.3 45.3zM176 320c6.9 0 13.5 .9 19.9 2.5l57.7 57.7c1.6 6.3 2.5 13 2.5 19.9c0 44.2-35.8 80-80 80H36.8C58 480 74.3 468.5 84 455.1c9.5-13.1 14.2-30 12.5-46.7c-.3-2.7-.4-5.5-.4-8.3c0-44.2 35.8-80 80-80zm110.3 60.2L557.2 109.3c25-25 25-65.5 0-90.5s-65.5-25-90.5 0l-271 271c-6.4-1.1-13-1.7-19.7-1.7c-61.9 0-112 50.1-112 112c0 3.9 .2 7.8 .6 11.6C66.4 429.1 54.4 448 36.8 448H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H176c61.9 0 112-50.1 112-112c0-6.8-.6-13.4-1.7-19.8zM170.8 17C148.9-4.9 113.5-4.9 91.6 17L49 59.6c-21.9 21.9-21.9 57.3 0 79.2L166.5 256.3c3.1-.2 6.3-.3 9.5-.3c2.7 0 5.3 .1 7.9 .2l13.9-13.9L149 193.6 225.6 117l48.8 48.8L297 143.2 170.8 17zM410.1 301.6l50.8 50.8c7.6 7.6 13.1 16.9 16.1 27.2l27.3 92.8-92.8-27.3c-10.3-3-19.6-8.6-27.2-16.1l-50.8-50.8-13.8 13.8c.1 2.7 .2 5.4 .2 8.1c0 3.2-.1 6.4-.3 9.5l42 42c11.4 11.4 25.4 19.7 40.8 24.2l121 35.6c5.6 1.7 11.7 .1 15.8-4s5.7-10.2 4-15.8l-35.6-121c-4.5-15.4-12.9-29.4-24.2-40.8l-50.8-50.8-22.6 22.6zM114.2 39.6c9.4-9.4 24.6-9.4 33.9 0L203 94.4 126.4 171 71.6 116.2c-9.4-9.4-9.4-24.6 0-33.9l42.6-42.6z"/>
+                                    </svg>
+                                </span>
                                 <div class="txt_box">
                                     <strong class="philosophy_tit">미래 가치 창조</strong>
                                     <p class="philosophy_desc">차세대 자동차 부품 개발은 기업 성장의 동력이라는 것을 인식하고 인재 양성과 연구개발에 끊임없이 매진한다.</p>
@@ -282,9 +298,9 @@
                     <div class="section_top">
                         <h2 class="section_tit">기술 인증</h2>
                     </div>
-                    <div class="cert_area con_box">
-                        <ul class="cert_list">
-                            <li class="cert_item">
+                    <div class="cert_area con_box cert_swiper">
+                        <ul class="cert_list swiper-wrapper">
+                            <li class="cert_item swiper-slide">
                                 <a href="" class="cert_link">
                                     <div class="txt_box">
                                         <strong class="cert_tit">IATF 16949</strong>
@@ -293,7 +309,7 @@
                                     <span class="cert_icon"></span>
                                 </a>
                             </li>
-                            <li class="cert_item">
+                            <li class="cert_item swiper-slide">
                                 <a href="" class="cert_link">
                                     <div class="txt_box">
                                         <strong class="cert_tit">ISO 9001</strong>
@@ -302,7 +318,7 @@
                                     <span class="cert_icon"></span>
                                 </a>
                             </li>
-                            <li class="cert_item">
+                            <li class="cert_item swiper-slide">
                                 <a href="" class="cert_link">
                                     <div class="txt_box">
                                         <strong class="cert_tit">ISO 14001</strong>
@@ -600,10 +616,46 @@
         };
     });
 
+
+    var certSwiper = new Swiper(".cert_swiper", {
+        slidesPerView: 'auto',
+
+        breakpoints: {
+            0: {
+                enabled: true,
+                slidesOffsetAfter: 24
+            },
+            768: {
+                enabled: true,
+                slidesOffsetAfter: 38
+            },
+                1229: {
+                enabled: false
+            }
+        },
+
+        on: {
+            init() {
+                togglePcLayout();
+            },
+            resize() {
+                togglePcLayout();
+            }
+        }
+    });
+
+    function togglePcLayout() {
+        const w = window.innerWidth;
+        const wrapper = document.querySelector('.cert_swiper .swiper-wrapper');
+
+        if (w >= 1229) {
+            wrapper.style.transform = 'none';
+        }
+    }
+
     const historySection = document.querySelector('.history_area');
 
-    var swiper = new Swiper(".history_swiper", {
-        slidesPerView:3,
+    var historySwiper = new Swiper(".history_swiper", {
 
         pagination: {
             el: historySection.querySelector('.swiper-pagination'),
@@ -613,7 +665,20 @@
             nextEl: historySection.querySelector('.swiper-button-next'),
             prevEl: historySection.querySelector('.swiper-button-prev'),
         },
-      
+        breakpoints: {
+            0: {
+                slidesPerView:1.22,
+                spaceBetween: 12,
+            },
+            768: {
+                slidesPerView:2,
+                spaceBetween: 16,
+            },
+                1229: {
+                slidesPerView:3,
+                spaceBetween: 24,
+            }
+        },
     });
 </script>
 </html>
