--- a/pub/index.html
+++ b/pub/index.html
@@ -332,8 +332,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
@@ -344,8 +344,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
@@ -356,8 +356,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
@@ -368,8 +368,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
@@ -380,8 +380,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
@@ -392,8 +392,8 @@
                                             <img src="./images/sample_new_img.png" alt="">
                                         </div>
                                         <div class="new_info">
-                                            <strong class="news_tit">전시회 참가</strong>
-                                            <p class="news_desc">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
+                                            <strong class="news_cate">전시회 참가</strong>
+                                            <p class="news_tit">뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다뉴오토의 최신 소식을 전해드리는 제목입니다</p>
                                             <span class="date">2024.07.15</span>
                                         </div>
                                     </a>
