상세페이지

--- a/pub_list.html
+++ b/pub_list.html
@@ -82,8 +82,8 @@
             </a>
         </li> 
         <li>
-            <a href="#none" target="_blank">
-                <p>홍보센터 - 전시회참가 - 상세페이지</p>
+            <a href="./pub/pr_center_detail.html" target="_blank">
+                <p>홍보센터 - 전시회참가 상세페이지</p>
                 <span></span>
                 <span></span>
             </a>
@@ -103,7 +103,7 @@
             </a>
         </li> 
         <li>
-            <a href="#none" target="_blank">
+            <a href="./pub/news_detail.html" target="_blank">
                 <p>홍보센터 - 뉴스 상세페이지</p>
                 <span></span>
                 <span></span>
